Feat(spinner.js): 아이템 처리와 색상 처리 추가

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>BBUMING Roulette</title>
   </head>
   <body>
-    <h1 class="title">게임 룰렛</h1>
+    <h1 class="title">쁘밍의 게임 룰렛</h1>
     <div class="canvas-wrap">
       <canvas width="500" height="500"></canvas>
     </div>
     <button onclick="rotate()">돌리기</button>
-    <button onclick="addProduct('테스트', 5)">추가 테스트</button>
-    <script src="./handle.js"></script>
+    <button onclick="addProduct('테스트')">추가 테스트</button>
+    <script src="./color.js"></script>
+    <script src="./spinner.js"></script>
   </body>
 </html>
