--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
   </head>
   <body>
     <div class="container">
-      <button onclick="rotate()">회전</button>
       <div class="wrapper">
-        <h1 class="title">룰렛</h1>
+        <h1 class="title">쁘밍의 게임 룰렛</h1>
         <div class="canvas-wrap">
           <canvas width="500" height="500"></canvas>
         </div>
+        <button class="rotate-btn" onclick="rotate()">Let's go!</button>
       </div>
-      <div class="input-area">
-        <div class="product-info">
-          <input type="text" />
-          <input type="number" />
-          <button class="add-button" onclick="addProduct('테스트')">추가</button>
-          <button class="add-button" onclick="subProduct('테스트')">빼기</button>
-        </div>
+      <div class="right-area">
+        <div class="input-area"></div>
+        <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
+        <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
       </div>
     </div>
     <script src="./js/color.js"></script>
     <script src="./js/product.js"></script>
+    <script src="./js/insert.js"></script>
     <script src="./js/spinner.js"></script>
   </body>
 </html>
