--- a/index.html
+++ b/index.html
@@ -3,26 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" />
     <link rel="stylesheet" href="./index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <title>BBUMING Roulette</title>
   </head>
   <body>
     <div class="container">
+      <canvas id="confetti"></canvas>
       <div class="wrapper">
         <h1 class="title">쁘밍의 게임 룰렛</h1>
+        <div class="result-box">
+          <p class="result">결과는 ..?</p>
+        </div>
         <div class="canvas-wrap">
-          <canvas width="500" height="500"></canvas>
-          <button class="rotate-btn" onclick="rotate()">SPIN</button>
-          <button class="stop-btn" onclick="stop()">STOP</button>
+          <canvas id="spinner" width="500" height="500"></canvas>
+          <button class="rotate spinner-btn" onclick="rotate()">SPIN</button>
+          <button class="stop spinner-btn" onclick="stop()">STOP</button>
         </div>
         <!-- <button class="rotate-btn" onclick="stop()">멈추기!</button> -->
       </div>
+      <div class="right-area-opener" onclick="switching()">></div>
       <div class="right-area">
         <div class="input-area"></div>
         <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
         <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
       </div>
     </div>
+    <script src="./js/confetti.js"></script>
+    <script src="./js/submenu.js"></script>
     <script src="./js/color.js"></script>
     <script src="./js/product.js"></script>
     <script src="./js/insert.js"></script>
