--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
       </div>
       <div class="right-area-opener" onclick="switching()">></div>
       <div class="right-area">
-        <div class="input-area"></div>
-        <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
-        <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
+        <div class="insert-area">
+          <h2 class="right-area-title">룰렛 목록 관리</h2>
+          <div class="input-area"></div>
+          <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
+          <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
+        </div>
       </div>
     </div>
     <script src="./js/confetti.js"></script>
