Chore(index.html): og:tags 추가

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="image_src" href="./images/ogimage.PNG" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" />
+    <meta name="description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="쁘밍의 게임 룰렛" />
+    <meta
+      property="og:description"
+      content="게임 룰렛으로 오늘의 게임을 정해보자!"
+    />
+    <meta property="og:image" content="./images/ogimage.PNG" />
+    <meta
+      property="og:url"
+      content="https://jiwooproity.github.io/game-spinner/index.html"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./index.css" />
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <title>BBUMING Roulette</title>
@@ -16,7 +32,7 @@
       <div class="wrapper">
         <h1 class="title">쁘밍의 게임 룰렛</h1>
         <div class="result-box">
-          <span class="result">오늘의 게임은 ..?!</p>
+          <span class="result">오늘의 게임은 ..?!</span>
         </div>
         <div class="canvas-wrap">
           <div class="canvas-spinner-arrow">
@@ -34,7 +50,9 @@
           <h2 class="right-area-title">룰렛 목록 관리</h2>
           <div class="input-area"></div>
           <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
-          <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
+          <button class="download-btn" onclick="getImage()">
+            스크린샷 저장
+          </button>
         </div>
       </div>
     </div>
