--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="image_src" href="./images/ogimage.PNG" />
+    <link
+      rel="image_src"
+      href="https://jiwooproity.github.io/game-spinner/images/ogimage.PNG"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
@@ -11,7 +14,10 @@
       property="og:description"
       content="게임 룰렛으로 오늘의 게임을 정해보자!"
     />
-    <meta property="og:image" content="./images/ogimage.PNG" />
+    <meta
+      property="og:image"
+      content="https://jiwooproity.github.io/game-spinner/images/ogimage.PNG"
+    />
     <meta
       property="og:url"
       content="https://jiwooproity.github.io/game-spinner/index.html"
