Style(spinner.css): 스핀, 스톱 버튼 css 수정

--- a/refact/index.html
+++ b/refact/index.html
@@ -21,16 +21,7 @@
         <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
         <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
       </div>
-      <div class="spinner-menu">
-        <div class="list">
-          <img class="icon" src="./images/list.svg" />
-          <span>룰렛 목록</span>
-        </div>
-        <div class="size">
-          <img class="icon" src="./images/size.svg" />
-          <span>크기 관리</span>
-        </div>
-      </div>
+      <div class="spinner-menu">리스트 영역</div>
     </div>
     <div class="winner-popup disabled">
       <div class="winner-box">
