Style(dirt.png): 당첨 팝업 흙 바닥 배경 추가

--- a/refact/index.html
+++ b/refact/index.html
@@ -31,6 +31,7 @@
           <img class="character left" src="./images/character.gif" />
           <span class="result"></span>
         </div>
+        <div class="dirt-floor"></div>
       </div>
       <canvas id="confetti"></canvas>
     </div>
