Feat(product-ui.js): 룰렛 추가, 스크린샷 저장, 삭제 기능 추가

--- a/refact/index.html
+++ b/refact/index.html
@@ -14,14 +14,31 @@
       <div class="backdrop-filter"></div>
     </div>
     <div class="container">
-      <div class="sub-menu"></div>
-      <div class="canvas-area">
-        <div class="pointer"></div>
-        <canvas id="spinner" width="500" height="500"></canvas>
-        <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
-        <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
+      <div class="spinner-area">
+        <div class="canvas-area">
+          <div class="pointer"></div>
+          <canvas id="spinner" width="500" height="500"></canvas>
+          <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
+          <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
+        </div>
+        <div class="spinner-menu">
+          <div class="menu-box">
+            <table class="menu-table">
+              <tbody>
+                <tr class="menu-item">
+                  <th>색상</th>
+                  <th>게임명</th>
+                  <th>개수</th>
+                  <th>확률</th>
+                  <th></th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <button class="add btn" onclick="addProduct()">룰렛 추가하기</button>
+          <button class="screenshot btn" onclick="screenshot()">스크린샷 저장하기</button>
+        </div>
       </div>
-      <div class="spinner-menu">리스트 영역</div>
     </div>
     <div class="winner-popup disabled">
       <div class="winner-box">
@@ -35,6 +52,7 @@
       </div>
       <canvas id="confetti"></canvas>
     </div>
+    <script src="./lib/html2canvas.js"></script>
     <script src="./javascript/audio.js"></script>
     <script src="./javascript/color.js"></script>
     <script src="./javascript/congratulate.js"></script>
@@ -42,5 +60,6 @@
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/spinner.js"></script>
     <script src="./javascript/product.js"></script>
+    <script src="./javascript/product-ui.js"></script>
   </body>
 </html>
