Feat(resize): 폰트 크기 및 돌림판 크기 설정 기능 추가

--- a/refact/index.html
+++ b/refact/index.html
@@ -20,6 +20,10 @@
           <canvas id="spinner" width="500" height="500"></canvas>
           <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
           <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
+          <div class="size-area">
+            <div>폰트 크기 : <input id="font-size" type="number" /> px</div>
+            <div>돌림판 크기 : <input id="spinner-size" type="number" /> px</div>
+          </div>
         </div>
         <div class="spinner-menu">
           <table class="menu-head">
