Fix(spinner.js): 돌림판 속도 조정

--- a/refact/index.html
+++ b/refact/index.html
@@ -21,8 +21,8 @@
           <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
           <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
           <div class="size-area">
-            <div>폰트 크기 : <input id="font-size" type="number" /> px</div>
-            <div>돌림판 크기 : <input id="spinner-size" type="number" /> px</div>
+            <div>폰트 크기 : <input id="font-size" type="number" value="15" /> px</div>
+            <div>돌림판 크기 : <input id="spinner-size" type="number" value="500" /> px</div>
           </div>
         </div>
         <div class="spinner-menu">
