--- a/index.html
+++ b/index.html
@@ -1,78 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="image_src" href="/images/ogimage.PNG" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="쁘밍의 게임 룰렛" />
-    <meta property="og:description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
-    <meta http-equiv="image" name="image" content="/images/ogimage.PNG" />
-    <meta property="og:image" content="/images/ogimage.PNG" />
-    <meta property="og:url" content="https://jiwooproity.github.io/game-spinner/index.html" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/spinner.css" />
+    <link rel="stylesheet" href="./styles/winner.css" />
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-    <title>BBUMING Roulette</title>
+    <title>Roulette</title>
   </head>
   <body>
+    <div class="backdrop-area">
+      <div class="backdrop-filter"></div>
+    </div>
     <div class="container">
-      <div class="background"></div>
-      <div class="backdrop"></div>
-      <canvas id="confetti"></canvas>
-      <div class="wrapper">
-        <h1 class="title">쁘밍의 게임 룰렛</h1>
-        <div class="result-box">
-          <span class="result">오늘의 게임은 ..?!</span>
-        </div>
-        <div class="canvas-wrap">
-          <div class="canvas-spinner-arrow">
-            <div class="arrow-bottom"></div>
-          </div>
+      <div class="spinner-area">
+        <div class="canvas-area">
+          <div class="pointer"></div>
           <canvas id="spinner" width="500" height="500"></canvas>
-          <button class="rotate spinner-btn" onclick="rotate()">SPIN</button>
-          <button class="stop spinner-btn" onclick="stop()">STOP</button>
-        </div>
-        <!-- <button class="rotate-btn" onclick="stop()">멈추기!</button> -->
-      </div>
-      <div class="right-area-opener" onclick="switching()"></div>
-      <div class="right-area">
-        <div class="insert-area">
-          <h2 class="right-area-title">룰렛 목록 관리</h2>
-          <div class="input-area"></div>
-          <button class="add-btn" onclick="addInsert()">룰렛 추가하기</button>
-          <button class="download-btn" onclick="getImage()">스크린샷 저장</button>
-        </div>
-        <div class="font-area">
-          <h2 class="right-area-title">사이즈 관리</h2>
-          <div class="input-area">
+          <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
+          <button
+            class="stop-btn spinner-btn-disabled"
+            onclick="spinner.stop()"
+          >
+            STOP
+          </button>
+          <div class="size-area">
             <div>
-              <span>돌림판 크기</span> :
-              <input id="spinner-size" class="size-input" type="number" value="500" max="800" /> px
+              폰트 크기 : <input id="font-size" type="number" value="15" /> px
             </div>
-            <div class="input-area">
-              <div>
-                <span>글자 크기</span> :
-                <input id="font-size" class="size-input" type="number" value="15" max="30" />
-                px
-              </div>
-            </div>
-            <div class="notification-area">
-              <span>다음 주 중에 방송 송출 화면에 맞게 디자인이 변경될 예정입니다.</span>
-              <span>임시방편으로 사이즈 관리 탭을 추가하였습니다.</span>
+            <div>
+              돌림판 크기 :
+              <input id="spinner-size" type="number" value="500" /> px
             </div>
           </div>
+        </div>
+        <div class="spinner-menu">
+          <table class="menu-head">
+            <tbody>
+              <tr class="menu-item">
+                <th class="color">색상</th>
+                <th class="game">게임명</th>
+                <th class="length">개수</th>
+                <th class="percent">확률</th>
+                <th class="trash"></th>
+              </tr>
+            </tbody>
+          </table>
+          <div class="menu-box">
+            <table class="menu-table">
+              <tbody></tbody>
+            </table>
+          </div>
+          <button class="add btn" onclick="addProduct()">룰렛 추가하기</button>
+          <button class="screenshot btn" onclick="screenshot()">
+            스크린샷 저장하기
+          </button>
         </div>
       </div>
     </div>
+    <div class="winner-popup disabled">
+      <div class="winner-box">
+        <span class="top-text">오늘의 게임은 ..?</span>
+        <div class="result-area">
+          <img class="speech-bubble" src="./images/speech-bubble.png" />
+          <img class="character left" src="./images/bburincle.gif" />
+          <img class="character right" src="./images/bbuming.gif" />
+          <span class="result"></span>
+        </div>
+        <div class="dirt-floor"></div>
+      </div>
+      <canvas id="confetti"></canvas>
+    </div>
     <script src="./lib/html2canvas.js"></script>
-    <script src="./js/confetti.js"></script>
-    <script src="./js/submenu.js"></script>
-    <script src="./js/color.js"></script>
-    <script src="./js/product.js"></script>
-    <script src="./js/insert.js"></script>
-    <script src="./js/spinner.js"></script>
-    <script src="./js/resize.js"></script>
+    <script src="./javascript/audio.js"></script>
+    <script src="./javascript/color.js"></script>
+    <script src="./javascript/congratulate.js"></script>
+    <script src="./javascript/popup.js"></script>
+    <script src="./javascript/storage.js"></script>
+    <script src="./javascript/spinner.js"></script>
+    <script src="./javascript/product.js"></script>
+    <script src="./javascript/product-ui.js"></script>
   </body>
 </html>
