SEO(index.html): og 이미지, 타이틀 및 각종 홈페이지 정보 작성

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="쁘밍의 게임 룰렛" />
+    <meta
+      property="og:description"
+      content="게임 룰렛으로 오늘의 게임을 정해보자!"
+    />
+    <meta http-equiv="image" name="image" content="/images/ogimage.PNG" />
+    <meta property="og:image" content="/images/ogimage.PNG" />
+    <meta
+      property="og:url"
+      content="https://jiwooproity.github.io/game-spinner/index.html"
+    />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/spinner.css" />
     <link rel="stylesheet" href="./styles/winner.css" />
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-    <title>Roulette</title>
+    <title>쁘밍의 게임 룰렛</title>
   </head>
   <body>
     <div class="backdrop-area">
