Style(character): 각 캐릭터 별 포지션 지정

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <span class="top-text">오늘의 게임은 ..?</span>
         <div class="result-area">
           <img class="speech-bubble" src="./images/speech-bubble.png" />
-          <img class="character left" src="./images/bburincle.gif" />
-          <img class="character right" src="./images/bbuming.gif" />
+          <img class="character bbuming" src="./images/bbuming.gif" />
+          <img class="character bburincle" src="./images/bburincle.gif" />
           <span class="result"></span>
         </div>
         <div class="dirt-floor"></div>
