Fix(product-ui.js): 자동완성 제거 및 접근성 강화 - Product 크기 input 자동완성 제거 - Product 이름 혹은 Product 크기 작성 후, Focus 사라지는 문제 해결 - Percent 계산 로직 분리 및 Percent 렌더링 방식 변경

--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
     <meta name="description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="쁘밍의 게임 룰렛" />
-    <meta
-      property="og:description"
-      content="게임 룰렛으로 오늘의 게임을 정해보자!"
-    />
+    <meta property="og:description" content="게임 룰렛으로 오늘의 게임을 정해보자!" />
     <meta http-equiv="image" name="image" content="/images/ogimage.PNG" />
     <meta property="og:image" content="/images/ogimage.PNG" />
-    <meta
-      property="og:url"
-      content="https://jiwooproity.github.io/game-spinner/index.html"
-    />
+    <meta property="og:url" content="https://jiwooproity.github.io/game-spinner/index.html" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/spinner.css" />
     <link rel="stylesheet" href="./styles/winner.css" />
@@ -32,16 +26,9 @@
           <div class="pointer"></div>
           <canvas id="spinner" width="500" height="500"></canvas>
           <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
-          <button
-            class="stop-btn spinner-btn-disabled"
-            onclick="spinner.stop()"
-          >
-            STOP
-          </button>
+          <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
           <div class="size-area">
-            <div>
-              폰트 크기 : <input id="font-size" type="number" value="15" /> px
-            </div>
+            <div>폰트 크기 : <input id="font-size" type="number" value="15" /> px</div>
             <div>
               돌림판 크기 :
               <input id="spinner-size" type="number" value="500" /> px
@@ -66,9 +53,7 @@
             </table>
           </div>
           <button class="add btn" onclick="addProduct()">룰렛 추가하기</button>
-          <button class="screenshot btn" onclick="screenshot()">
-            스크린샷 저장하기
-          </button>
+          <button class="screenshot btn" onclick="screenshot()">스크린샷 저장하기</button>
         </div>
       </div>
     </div>
@@ -88,6 +73,7 @@
     <script src="./lib/html2canvas.js"></script>
     <script src="./javascript/audio.js"></script>
     <script src="./javascript/color.js"></script>
+    <script src="./javascript/calculate.js"></script>
     <script src="./javascript/congratulate.js"></script>
     <script src="./javascript/popup.js"></script>
     <script src="./javascript/storage.js"></script>
