Feat(audio.js): 소리 활성화 / 비활성화 기능 추가 - 돌림판 하단에 소리를 활성화 혹은 비활성화 가능한 버튼 추가

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <button class="rotate-btn" onclick="spinner.rotate()">SPIN</button>
           <button class="stop-btn spinner-btn-disabled" onclick="spinner.stop()">STOP</button>
           <div class="size-area">
+            <div>
+              <img class="speaker" src="./images/speaker-on.svg" />
+            </div>
             <div>폰트 크기 : <input id="font-size" type="number" value="15" /> px</div>
             <div>
               돌림판 크기 :
@@ -71,12 +74,12 @@
       <canvas id="confetti"></canvas>
     </div>
     <script src="./lib/html2canvas.js"></script>
+    <script src="./javascript/storage.js"></script>
     <script src="./javascript/audio.js"></script>
     <script src="./javascript/color.js"></script>
     <script src="./javascript/calculate.js"></script>
     <script src="./javascript/congratulate.js"></script>
     <script src="./javascript/popup.js"></script>
-    <script src="./javascript/storage.js"></script>
     <script src="./javascript/spinner.js"></script>
     <script src="./javascript/product.js"></script>
     <script src="./javascript/product-ui.js"></script>
