Feat(winner.css): 당첨 화면에 아이템 당첨 확률 표가ㅣ

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
           <img class="speech-bubble" src="./images/speech-bubble.png" />
           <img class="character bbuming" src="./images/bbuming.gif" />
           <img class="character bburincle" src="./images/bburincle.gif" />
+          <div class="percent-area">
+            <img class="object sign" src="./images/sign.svg" />
+            <span class="percent-in-sign"></span>
+          </div>
           <span class="result"></span>
         </div>
         <div class="dirt-floor"></div>
