Style(favicon.ico): 홈페이지 아이콘 설정

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="image" name="image" content="/images/ogimage.PNG" />
     <meta property="og:image" content="/images/ogimage.PNG" />
     <meta property="og:url" content="https://jiwooproity.github.io/game-spinner/index.html" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/spinner.css" />
     <link rel="stylesheet" href="./styles/winner.css" />
@@ -64,7 +65,7 @@
       <div class="winner-box">
         <span class="top-text">오늘의 게임은 ..?</span>
         <div class="result-area">
-          <img class="speech-bubble" src="./images/speech-bubble.png" />
+          <img class="speech-bubble" src="./images/speech-bubble.svg" />
           <img class="character bbuming" src="./images/bbuming.gif" />
           <img class="character bburincle" src="./images/bburincle.gif" />
           <div class="percent-area">
