Feat(update-alert.js): 업데이트 알림 팝업 추가

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <title>쁘밍의 게임 룰렛</title>
   </head>
   <body>
+    <div class="update-screen disabled">
+      <img class="bbeggom-bbuming" src="./images/bbeggom.gif" />
+      <div class="update-text-area">
+        <span class="update-text">* 쁘밍의 게임 룰렛이 업데이트 되었습니다.</span>
+        <span class="update-text">* 기존 버전의 데이터는 충돌 방지를 위해 제거됩니다.</span>
+      </div>
+      <button class="update-btn">확인</button>
+    </div>
     <div class="backdrop-area">
       <div class="backdrop-filter"></div>
     </div>
@@ -88,5 +96,6 @@
     <script src="./javascript/spinner.js"></script>
     <script src="./javascript/product.js"></script>
     <script src="./javascript/product-ui.js"></script>
+    <script src="./javascript/update-alert.js"></script>
   </body>
 </html>
