--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   </head>
   <body>
     <div class="update-screen disabled">
-      <img class="bbeggom-bbuming" src="./images/bbeggom.gif" />
+      <div class="bbeggom-area">
+        <img class="bbeggom-bbuming" src="./images/bbeggom.gif" />
+      </div>
       <div class="update-text-area">
-        <span class="update-text">* 쁘밍의 게임 룰렛이 업데이트 되었습니다.</span>
-        <span class="update-text">* 기존 버전의 데이터는 충돌 방지를 위해 제거됩니다.</span>
+        <span class="update-text">쁘밍의 게임 룰렛이 업데이트 되었습니다.</span>
+        <span class="update-text">기존 버전의 데이터는 충돌 방지를 위해 제거됩니다.</span>
       </div>
       <button class="update-btn">확인</button>
     </div>
