Feat(standby.js): 대기 화면 텍스트 타이핑 효과 추가 - 대기 화면 텍스트 종류 추가 - 대기 화면 텍스트 타이핑 지우기, 입력 효과 추가

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="bbeggom-bbuming" src="./images/bbeggom.gif" />
       </div>
       <div class="standby-text-area">
-        <span class="standby-text">쁘밍의 게임 룰렛</span>
+        <span class="standby-text"></span>
       </div>
       <button class="standby-btn">시작</button>
     </div>
