Style(cat): 쁘밍님의 마늘 고양이 픽셀 아트 추가

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <img class="object sign" src="./images/sign.svg" />
             <span class="percent-in-sign"></span>
           </div>
+          <img class="pet maneul" src="./images/maneul.gif" />
           <span class="result"></span>
         </div>
         <div class="dirt-floor"></div>
