Feat(google-translate): 자동 번역 차단

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +10,7 @@
     <meta http-equiv="image" name="image" content="/images/ogimage.PNG" />
     <meta property="og:image" content="/images/ogimage.PNG" />
     <meta property="og:url" content="https://jiwooproity.github.io/game-spinner/index.html" />
+    <meta name="google" content="notranslate" />
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/spinner.css" />
