Feat(screenshot.js): 스크린샷 이미지 날짜 정보 추가 - 스크린샷 이미지 안에 현재 날짜와 시간을 작성하여 표기하는 기능을 추가함

--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
       <canvas id="confetti"></canvas>
     </div>
     <script src="./lib/html2canvas.js"></script>
+    <script src="./javascript/day.js"></script>
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/audio.js"></script>
     <script src="./javascript/color.js"></script>
     <script src="./javascript/calculate.js"></script>
     <script src="./javascript/congratulate.js"></script>
     <script src="./javascript/popup.js"></script>
+    <script src="./javascript/screenshot.js"></script>
     <script src="./javascript/spinner.js"></script>
     <script src="./javascript/product.js"></script>
     <script src="./javascript/product-ui.js"></script>
