Feat(reset-item): 룰렛 아이템 초기화 기능 추가 - 룰렛 아이템 초기화 및 UI 재렌더링 - Localstorage 룰렛 아이템 재배치 - Product 객체 초기 값 설정

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </table>
           </div>
           <button class="add btn" onclick="addProduct()">룰렛 추가하기</button>
+          <button class="reset btn" onclick="reset()">룰렛 초기화</button>
           <button class="screenshot btn" onclick="screenshot()">스크린샷 저장하기</button>
         </div>
       </div>
